--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "framer-motion": "^12.29.2",
     "lucide-react": "^0.563.0",
     "react": "^19.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.2.0",
+    "react-parallax-tilt": "^1.7.317",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
