--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^19.2.0",
     "react-parallax-tilt": "^1.7.317",
+    "react-type-animation": "^3.2.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
