--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "react": "^19.2.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.2.0",
+    "react-globe.gl": "^2.37.0",
     "react-parallax-tilt": "^1.7.317",
     "react-type-animation": "^3.2.0",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
